--- a/config/database.yml
+++ b/config/database.yml
@@ -7,10 +7,10 @@ development:
   adapter: mysql2 
   encoding: utf8
   reconnect: false
-  database: TMS1
+  database: TMS
   pool: 5
   username: root
-  password: "123456"
+  password: 
   socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
@@ -20,10 +20,10 @@ test:
   adapter: mysql2 
   encoding: utf8
   reconnect: false
-  database: TMS
+  database: TMS1
   pool: 5
   username: root
-  password: "123456"
+  password: 
   socket: /var/run/mysqld/mysqld.sock
 
 production:
