--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ rerun.txt
 pickle-email-*.html
 .project
 config/initializers/secret_token.rb
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
